[package]
authors = ["9names"]
edition = "2021"
readme = "README.md"
name = "lpc13xx"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
lpc-iap = { path = "../../lpc-iap", default-features = false }
flash-algorithm = "0.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "lpc13xx"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
